unpackaged/main/default/objects/UAT_Focus_Prompt__mdt/UAT_Focus_Prompt__mdt.object-meta.xml
<CustomObject>
    <label>UAT Focus Prompt</label>
    <pluralLabel>UAT Focus Prompts</pluralLabel>
</CustomObject>