unpackaged/main/default/objects/UAT_Focus_Prompt__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unchecked retires the chip without deleting the record — the phrasing stays on file for reference. Inactive records are skipped by UatSessionController.resolvePrompts.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>