unpackaged/main/default/objects/UAT_Focus_Prompt__mdt/fields/Insert_Text__c.field-meta.xml
<CustomField>
    <fullName>Insert_Text__c</fullName>
    <description>Exactly what lands in the tester&#39;s running notes when the chip is clicked, e.g. &quot;Observation: &quot; — keep the trailing space, the caret parks right after it. The record&#39;s Label is the chip&#39;s button text. Blank falls back to &quot;&lt;Label&gt;: &quot;.</description>
    <label>Insert Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>