unpackaged/main/default/objects/UAT_Focus_Prompt__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Left-to-right order of the chips. Ties break on Label. Blank sorts last.</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>